compiler/testData/diagnostics/tests/subtyping/unresolvedSupertype.fir.kt
interface A1 : <!OTHER_ERROR!>B<!>

interface A2 : <!OTHER_ERROR!>B<!>()

class A3 : <!OTHER_ERROR!>B<!>, <!OTHER_ERROR!>B<!>

enum class A4 : <!OTHER_ERROR!>B<!>
